--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.contentforge</groupId>
     <artifactId>FormConstructor</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -22,6 +22,10 @@
             <name>MEFRREEX</name>
             <url>https://github.com/MEFRREEX</url>
         </developer>
+        <developer>
+            <name>AzaleeX</name>
+            <url>https://github.com/AzaleeX</url>
+        </developer> 
     </developers>
 
     <repositories>
@@ -33,9 +37,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.powernukkitx</groupId>
-            <artifactId>powernukkitx</artifactId>
-            <version>1.20.40-r1</version>
+            <groupId>com.github.PowerNukkitX</groupId>
+            <artifactId>PowerNukkitX</artifactId>
+            <version>master-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
